portfolio section done

--- a/index.html
+++ b/index.html
@@ -44,42 +44,56 @@
 
             <!-- PORTFOLIO -->
             
-            <div class="container" id="portfolio">
+            <div class="container text-center" id="portfolio">
                 <div class="row">
                     <div class="col-12">
-                        PORTFOLIO
+                        <h1>
+                            PORTFOLIO
+                        </h1>
                     </div>
                     <div class="col-12">
-                        STARS AND STRIPES
-                    </div>
-                    <div class="col">
-                        <div class="content">
-                            <img src="" alt="">
+                        <div class="container">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="col-2 gx-1 darkblue">                           
+                                     <hr class="separator">
+                                </div>
+                                <div class="col-1 gx-1">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <div class="col-2 gx-1">                      
+                                    <hr class="separator">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="" alt="">
+                            <img src="./img/cabin.png" alt="Cabin" class="rounded">
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="" alt="">
+                            <img src="./img/cake.png" alt="Cake" class="rounded">
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="" alt="">
+                            <img src="./img/circus.png" alt="Circus" class="rounded">
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="" alt="">
+                            <img src="./img/game.png" alt="Gamepad" class="rounded">
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="" alt="">
+                            <img src="./img/safe.png" alt="Safe" class="rounded">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 g-4">
+                        <div class="content">
+                            <img src="./img/submarine.png" alt="Submarine" class="rounded">
                         </div>
                     </div>
                 </div>
@@ -96,10 +110,10 @@
                         <div class="col-12">
                             STARS AND STRIPES
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-md-6">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus nobis exercitationem vero, enim praesentium cumque quam accusamus? Iste nihil deserunt accusamus quod ipsum, velit repellat beatae. Molestias necessitatibus dolorum praesentium?
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-md-6">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius veniam odit natus iusto eaque itaque at earum, quos accusamus molestias et, dolores impedit sint possimus quod tenetur quisquam enim eligendi.
                         </div>
                         <div class="col-12">
