avatar section done

--- a/index.html
+++ b/index.html
@@ -32,19 +32,43 @@
             <!-- MAIN -->
 
             <div class="bg-acquamarino">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">BIG MAN</div>
-                        <div class="col-12">START BOOTSTRAP</div>
-                        <div class="col-12">STAR AND STRIPES</div>
-                        <div class="col-12">GRAPHIC DESIGNER - WEB DESIGNER - ILLUSTRATOR</div>
+                <div class="container text-center py-4">
+                    <div class="row white">
+                        <div class="col-12">
+                            <div class="container w-50 align-items-center">
+                                <img src="./img/avatar.svg" alt="Avatar">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <h1>
+                                START BOOTSTRAP
+                            </h1>
+                        </div>
+                        <div class="col-12">
+                            <div class="row justify-content-center align-items-center">
+                                <div class="col-2 gx-1">                           
+                                     <hr class="separator">
+                                </div>
+                                <div class="col-1 gx-1">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <div class="col-2 gx-1">                      
+                                    <hr class="separator">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <h2>
+                                GRAPHIC DESIGNER - WEB DESIGNER - ILLUSTRATOR
+                            </h2>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- PORTFOLIO -->
             
-            <div class="container text-center" id="portfolio">
+            <div class="container text-center my-4" id="portfolio">
                 <div class="row">
                     <div class="col-12">
                         <h1>
@@ -54,7 +78,7 @@
                     <div class="col-12">
                         <div class="container">
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-2 gx-1 darkblue">                           
+                                <div class="col-2 gx-1">                           
                                      <hr class="separator">
                                 </div>
                                 <div class="col-1 gx-1">
@@ -68,32 +92,32 @@
                     </div>
                     <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="./img/cabin.png" alt="Cabin" class="rounded">
+                            <img src="./img/cabin.png" alt="Cabin" class="rounded mw-100">
                         </div>
                     </div>
                     <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="./img/cake.png" alt="Cake" class="rounded">
+                            <img src="./img/cake.png" alt="Cake" class="rounded mw-100">
                         </div>
                     </div>
                     <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="./img/circus.png" alt="Circus" class="rounded">
+                            <img src="./img/circus.png" alt="Circus" class="rounded mw-100">
                         </div>
                     </div>
                     <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="./img/game.png" alt="Gamepad" class="rounded">
+                            <img src="./img/game.png" alt="Gamepad" class="rounded mw-100">
                         </div>
                     </div>
                     <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="./img/safe.png" alt="Safe" class="rounded">
+                            <img src="./img/safe.png" alt="Safe" class="rounded mw-100">
                         </div>
                     </div>
                     <div class="col-12 col-md-4 g-4">
                         <div class="content">
-                            <img src="./img/submarine.png" alt="Submarine" class="rounded">
+                            <img src="./img/submarine.png" alt="Submarine" class="rounded mw-100">
                         </div>
                     </div>
                 </div>
