--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="container text-center py-4">
                     <div class="row white">
                         <div class="col-12">
-                            <div class="container w-50 align-items-center">
+                            <div class="container align-items-center" style="width: 15rem;">
                                 <img src="./img/avatar.svg" alt="Avatar">
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                                      <hr class="separator">
                                 </div>
                                 <div class="col-1 gx-1">
-                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star fa-2x"></i>
                                 </div>
                                 <div class="col-2 gx-1">                      
                                     <hr class="separator">
@@ -71,9 +71,9 @@
             <div class="container text-center my-4" id="portfolio">
                 <div class="row">
                     <div class="col-12">
-                        <h1>
+                        <h2>
                             PORTFOLIO
-                        </h1>
+                        </h2>
                     </div>
                     <div class="col-12">
                         <div class="container">
@@ -82,7 +82,7 @@
                                      <hr class="separator">
                                 </div>
                                 <div class="col-1 gx-1">
-                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star fa-2x"></i>
                                 </div>
                                 <div class="col-2 gx-1">                      
                                     <hr class="separator">
@@ -125,24 +125,38 @@
 
             <!-- ABOUT-ME -->
 
-            <div class="bg-acquamarino">
-                <div class="container" id="about">
-                    <div class="row">
+            <div class="bg-acquamarino py-4">
+                <div class="container text-center white" id="about">
+                    <div class="row g-4">
                         <div class="col-12">
-                            ABOUT
-                        </div>
-                        <div class="col-12">
-                            STARS AND STRIPES
-                        </div>
-                        <div class="col-12 col-md-6">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus nobis exercitationem vero, enim praesentium cumque quam accusamus? Iste nihil deserunt accusamus quod ipsum, velit repellat beatae. Molestias necessitatibus dolorum praesentium?
-                        </div>
-                        <div class="col-12 col-md-6">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius veniam odit natus iusto eaque itaque at earum, quos accusamus molestias et, dolores impedit sint possimus quod tenetur quisquam enim eligendi.
+                            <h2>
+                                ABOUT
+                            </h2>
                         </div>
                         <div class="col-12">
-                            <div class="button">
-                                DOWNLOAD
+                            <div class="row justify-content-center align-items-center">
+                                <div class="col-2 gx-1">                           
+                                     <hr class="separator">
+                                </div>
+                                <div class="col-1 gx-1">
+                                    <i class="fa-solid fa-star fa-2x"></i>
+                                </div>
+                                <div class="col-2 gx-1">                      
+                                    <hr class="separator">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 text-start">
+                            Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS styleheads for easy costumization.
+                        </div>
+                        <div class="col-12 col-md-6 text-start">
+                            Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic designer looking to share your projects, this template is the perfect starting point!
+                        </div>
+                        <div class="col-12">
+                            <div class="row justify-content-center">
+                                <div class="button w-25">
+                                    DOWNLOAD
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -151,7 +165,23 @@
 
             <!-- CONTACT-ME -->
 
-            <div class="container" id="contact-me">
+            <div class="container py-4" id="contact-me">
+                <h2 class="text-center">
+                    CONTACT ME
+                </h2>
+                <div>
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-2 gx-1">                           
+                             <hr class="separator">
+                        </div>
+                        <div class="col-1 gx-1">
+                            <i class="fa-solid fa-star fa-2x"></i>
+                        </div>
+                        <div class="col-2 gx-1">                      
+                            <hr class="separator">
+                        </div>
+                    </div>
+                </div>
                 <div>
                     Name
                 </div>
@@ -168,7 +198,7 @@
                     Message
                 </div>
                 <hr>
-                <div class="button">
+                <div class="button w-25 text-center white bg-acquamarino">
                     Send
                 </div>
             </div>
