footer section done

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- PORTFOLIO -->
             
             <div class="container text-center my-4" id="portfolio">
-                <div class="row">
+                <div class="row g-4">
                     <div class="col-12">
                         <h2>
                             PORTFOLIO
@@ -90,32 +90,32 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 g-4">
+                    <div class="col-12 col-md-4">
                         <div class="content">
                             <img src="./img/cabin.png" alt="Cabin" class="rounded mw-100">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 g-4">
+                    <div class="col-12 col-md-4">
                         <div class="content">
                             <img src="./img/cake.png" alt="Cake" class="rounded mw-100">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 g-4">
+                    <div class="col-12 col-md-4">
                         <div class="content">
                             <img src="./img/circus.png" alt="Circus" class="rounded mw-100">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 g-4">
+                    <div class="col-12 col-md-4">
                         <div class="content">
                             <img src="./img/game.png" alt="Gamepad" class="rounded mw-100">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 g-4">
+                    <div class="col-12 col-md-4">
                         <div class="content">
                             <img src="./img/safe.png" alt="Safe" class="rounded mw-100">
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 g-4">
+                    <div class="col-12 col-md-4">
                         <div class="content">
                             <img src="./img/submarine.png" alt="Submarine" class="rounded mw-100">
                         </div>
@@ -208,16 +208,36 @@
 
             <!-- FOOTER -->
 
-            <div class="container">
-                <div class="row">
-                    <div class="col">Location</div>
-                    <div class="col">Around the Web</div>
-                    <div class="col">About Freelancer</div>
+            <div class="container white text-center my-4">
+                <div class="row g-4">
+                    <div class="col-12 col-md-4">
+                        <div>
+                            <div>LOCATION</div>
+                            <div>2215 John Daniel Drive Clark, MO 54243</div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>
+                            <div>AROUND THE WEB</div>
+                            <div>
+                                <i class="fa-brands fa-facebook-f"></i>
+                                <i class="fa-brands fa-google-plus-g"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>ABOUT FREELANCER</div>
+                        <div>
+                            Freelancer is a free to use, open source Bootstrap theme created by <span>Start Bootstrap.</span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="text-center" id="copyright">
-                Copyright
+            <div class="text-center py-4 white" id="copyright">
+                Copyright &copy; Your Website, 2019
             </div>
         </footer>
     </body>
