updated with more bootstrap and less css

--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
                     </div>
                 </div>
                 <div class="col text-end">
-                    <div class="p-3">
+                    <div class="p-3 d-md-none">
                         <i class="fa-solid fa-bars"></i>
+                    </div>
+                    <div class="p-3">
+                        <ul class="d-none d-md-flex justify-content-around">
+                            <li>PORTFOLIO</li>
+                            <li>ABOUT</li>
+                            <li>CONTACT</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -33,10 +40,10 @@
 
             <div class="bg-acquamarino">
                 <div class="container text-center py-4">
-                    <div class="row white">
+                    <div class="row text-white">
                         <div class="col-12">
                             <div class="container align-items-center" style="width: 15rem;">
-                                <img src="./img/avatar.svg" alt="Avatar">
+                                <img src="./img/avatar.svg" alt="Avatar" class="img-fluid">
                             </div>
                         </div>
                         <div class="col-12">
@@ -92,32 +99,32 @@
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="content">
-                            <img src="./img/cabin.png" alt="Cabin" class="rounded mw-100">
+                            <img src="./img/cabin.png" alt="Cabin" class="img-fluid rounded">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="content">
-                            <img src="./img/cake.png" alt="Cake" class="rounded mw-100">
+                            <img src="./img/cake.png" alt="Cake" class="img-fluid rounded">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="content">
-                            <img src="./img/circus.png" alt="Circus" class="rounded mw-100">
+                            <img src="./img/circus.png" alt="Circus" class="img-fluid rounded">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="content">
-                            <img src="./img/game.png" alt="Gamepad" class="rounded mw-100">
+                            <img src="./img/game.png" alt="Gamepad" class="img-fluid rounded">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="content">
-                            <img src="./img/safe.png" alt="Safe" class="rounded mw-100">
+                            <img src="./img/safe.png" alt="Safe" class="img-fluid rounded">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="content">
-                            <img src="./img/submarine.png" alt="Submarine" class="rounded mw-100">
+                            <img src="./img/submarine.png" alt="Submarine" class="img-fluid rounded">
                         </div>
                     </div>
                 </div>
@@ -126,7 +133,7 @@
             <!-- ABOUT-ME -->
 
             <div class="bg-acquamarino py-4">
-                <div class="container text-center white" id="about">
+                <div class="container text-center text-white" id="about">
                     <div class="row g-4">
                         <div class="col-12">
                             <h2>
@@ -154,7 +161,7 @@
                         </div>
                         <div class="col-12">
                             <div class="row justify-content-center">
-                                <div class="button w-25">
+                                <div class="btn btn-success w-25">
                                     DOWNLOAD
                                 </div>
                             </div>
@@ -182,25 +189,29 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    Name
-                </div>
-                <hr>           
-                <div>
-                    Email Adress
-                </div>
-                <hr>                
-                <div>
-                    Phone Number
-                </div>
-                <hr>                
-                <div>
-                    Message
-                </div>
-                <hr>
-                <div class="button w-25 text-center white bg-acquamarino">
-                    Send
-                </div>
+                <form method="GET">
+                    <div>
+                        <label for="name" class="form-label">Name</label>
+                        <input required type="text" class="form-control" id="name" placeholder="Name Surname">
+                    </div>
+                    <hr>           
+                    <div>
+                        <label for="email" class="form-label">Email</label>
+                        <input required type="email" class="form-control" id="email" placeholder="email@example.com">
+                    </div>
+                    <hr>                
+                    <div>
+                        <label for="telephone" class="form-label">Phone Number</label>
+                        <input type="tel" class="form-control" id="telephone" placeholder="0123456789" maxlength="10">
+                    </div>
+                    <hr>                
+                    <div>
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message"></textarea>
+                    </div>
+                    <hr>
+                    <input type="submit" class="form-control btn btn-success w-25" value="Send">
+                </form>
             </div>
         </main>
 
@@ -208,7 +219,7 @@
 
             <!-- FOOTER -->
 
-            <div class="container white text-center my-4">
+            <div class="container text-white text-center my-4">
                 <div class="row g-4">
                     <div class="col-12 col-md-4">
                         <div>
@@ -230,13 +241,13 @@
                     <div class="col-12 col-md-4">
                         <div>ABOUT FREELANCER</div>
                         <div>
-                            Freelancer is a free to use, open source Bootstrap theme created by <span>Start Bootstrap.</span>
+                            Freelancer is a free to use, open source Bootstrap theme created by <span class="text-success">Start Bootstrap.</span>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="text-center py-4 white" id="copyright">
+            <div class="text-center py-4 text-white" id="copyright">
                 Copyright &copy; Your Website, 2019
             </div>
         </footer>
