--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="container text-center py-4">
                     <div class="row text-white">
                         <div class="col-12">
-                            <div class="container align-items-center" style="width: 15rem;">
+                            <div class="container align-items-center" id="avatar-container">
                                 <img src="./img/avatar.svg" alt="Avatar" class="img-fluid">
                             </div>
                         </div>
